Alterado formatação dos textos

--- a/nosql/1.banco_documentos.ipynb
+++ b/nosql/1.banco_documentos.ipynb
@@ -28,10 +28,14 @@
     "\n",
     "Vantagens aplicadas ao projeto:\n",
     "\n",
-    "* **Esquema Flexível (Dynamic Schema):** Permite que cada documento na coleção `Produtos` tenha campos exclusivos (como \"drivers\" para áudio ou \"tipo_painel\" para monitores) sem afetar os demais registros.\n",
-    "* **Mapeamento Direto para Objetos (JSON/BSON):** A estrutura de armazenamento é idêntica aos dicionários utilizados no script Python, facilitando a integração e o desenvolvimento.\n",
-    "* **Escalabilidade Horizontal:** Preparado para lidar com o crescimento massivo do catálogo através de distribuição em clusters (sharding).\n",
-    "* **Consultas Ricas:** Facilita a busca por filtros específicos dentro de objetos aninhados, como buscar todos os produtos que possuem \"Som Surround\" dentro do campo de especificações."
+    "* **Esquema Flexível (Dynamic Schema)** \n",
+    "    * Permite que cada documento na coleção \"Produtos\" tenha campos exclusivos (como \"drivers\" para áudio ou \"tipo_painel\" para monitores) sem afetar os demais registros.\n",
+    "* **Mapeamento Direto para Objetos (JSON/BSON)** \n",
+    "    * A estrutura de armazenamento é idêntica aos dicionários utilizados no script Python, facilitando a integração e o desenvolvimento.\n",
+    "* **Escalabilidade Horizontal** \n",
+    "    * Preparado para lidar com o crescimento massivo do catálogo através de distribuição em clusters (sharding).\n",
+    "* **Consultas Ricas** \n",
+    "    * Facilita a busca por filtros específicos dentro de objetos aninhados, como buscar todos os produtos que possuem \"Som Surround\" dentro do campo de especificações."
    ]
   },
   {
