--- a/nosql/2.banco_chave_valor.ipynb
+++ b/nosql/2.banco_chave_valor.ipynb
@@ -26,10 +26,14 @@
     "### Redis\n",
     "O Redis foi selecionado para gerenciar as sessões de usuários devido à sua capacidade de processar dados em milissegundos. Como as informações de autenticação são acessadas a cada clique do usuário, um banco que opera em memória evita latências que comprometeriam a experiência de navegação. Além disso, o Redis oferece vantagens específicas para este cenário:\n",
     "\n",
-    "* **Performance de Ultrabaixa Latência**: por armazenar os dados primariamente na memória RAM, o acesso às informações é quase instantâneo, ideal para validações de tokens em tempo real.\n",
-    "* **Estrutura Simples de Chave-Valor**: foca na eficiência ao associar um identificador único (chave) a um conjunto de dados (valor), eliminando o processamento pesado de consultas relacionais complexas.\n",
-    "* **Gerenciamento de Expiração (TTL)**: possui suporte nativo para configurar um \"Tempo de Vida\" para os dados, permitindo que sessões inativas expirem e sejam removidas automaticamente do banco.\n",
-    "* **Alta Disponibilidade e Escalabilidade**: suporta a manipulação de milhares de operações por segundo, garantindo que o sistema de autenticação permaneça estável mesmo durante picos massivos de acesso."
+    "* **Performance de Ultrabaixa Latência**\n",
+    "    * Por armazenar os dados primariamente na memória RAM, o acesso às informações é quase instantâneo, ideal para validações de tokens em tempo real.\n",
+    "* **Estrutura Simples de Chave-Valor**\n",
+    "    * Foca na eficiência ao associar um identificador único (chave) a um conjunto de dados (valor), eliminando o processamento pesado de consultas relacionais complexas.\n",
+    "* **Gerenciamento de Expiração (TTL)**\n",
+    "    * Possui suporte nativo para configurar um \"Tempo de Vida\" para os dados, permitindo que sessões inativas expirem e sejam removidas automaticamente do banco.\n",
+    "* **Alta Disponibilidade e Escalabilidade**\n",
+    "    * Suporta a manipulação de milhares de operações por segundo, garantindo que o sistema de autenticação permaneça estável mesmo durante picos massivos de acesso."
    ]
   },
   {
