--- a/nosql/4.banco_colunas.ipynb
+++ b/nosql/4.banco_colunas.ipynb
@@ -24,7 +24,16 @@
    "source": [
     "## Banco de Dados Escolhido\n",
     "### Cassandra\n",
-    "O **Apache Cassandra** é um banco de dados NoSQL altamente escalável e distribuído, projetado para lidar com grandes volumes de dados em tempo real, com alta disponibilidade, tolerância a falhas e sem ponto único de falha."
+    "O **Apache Cassandra** foi selecionado para o armazenamento de logs devido à sua capacidade excepcional de lidar com volumes massivos de dados (Big Data) com alta disponibilidade. Diferente dos bancos tradicionais, ele permite escritas extremamente rápidas e consultas analíticas eficientes ao agrupar dados por colunas, o que é ideal para séries temporais e rastreamento de eventos. Além disso, oferece:\n",
+    "\n",
+    "* **Escalabilidade Linear**\n",
+    "    * Permite adicionar mais servidores ao cluster de forma simples, aumentando a capacidade de processamento proporcionalmente sem interrupções.\n",
+    "* **Arquitetura sem Ponto Único de Falha**\n",
+    "    * Como todos os nós no cluster são iguais, o sistema permanece operacional mesmo se vários servidores falharem simultaneamente.\n",
+    "* **Modelo de Colunas Flexível**\n",
+    "    * Permite que diferentes linhas dentro de uma \"família de colunas\" tenham atributos distintos, otimizando o espaço de armazenamento.\n",
+    "* **Performance para Escrita Massiva**\n",
+    "    * É otimizado para registrar milhões de eventos por segundo, como logs de acesso e telemetria, sem degradar a performance do sistema principal."
    ]
   },
   {
@@ -32,7 +41,8 @@
    "id": "dc2a6f10",
    "metadata": {},
    "source": [
-    "### Exemplo de Utilização"
+    "### Exemplo de Utilização\n",
+    "Para exemplificar, vamos utilizar a biblioteca `astrapy`, que é a interface oficial para interagir com o Astra DB de forma moderna."
    ]
   },
   {
