Silenciado warnings de depreciação

--- a/nosql/2.banco_chave_valor.ipynb
+++ b/nosql/2.banco_chave_valor.ipynb
@@ -66,7 +66,10 @@
     "# Importando as bibliotecas\n",
     "import fakeredis\n",
     "import json\n",
-    "import time"
+    "import time\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
    ]
   },
   {
@@ -74,19 +77,10 @@
    "execution_count": 3,
    "id": "6a370de5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6304\\4063327895.py:2: DeprecationWarning: Call to '__init__' function with deprecated usage of input argument/s 'retry_on_timeout'. (TimeoutError is included by default.) -- Deprecated since version 6.0.0.\n",
-      "  r = fakeredis.FakeStrictRedis(decode_responses=True) # O decode_responses=True permite trabalhar com strings em vez de bytes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Criando a conexão simulada\n",
-    "r = fakeredis.FakeStrictRedis(decode_responses=True) # O decode_responses=True permite trabalhar com strings em vez de bytes\n",
+    "r = fakeredis.FakeRedis(decode_responses=True) # O decode_responses=True permite trabalhar com strings em vez de bytes\n",
     "\n",
     "def criar_sessao(user_id, token, expira_em_segundos=30):\n",
     "    \"\"\"Simula o login de um usuário e cria uma sessão com TTL\"\"\"\n",
@@ -135,7 +129,7 @@
       "Sessão criada para o usuário 12345. Expira em 2s.\n",
       "\n",
       "Verificando sessão imediatamente...\n",
-      "Acesso autorizado! Dados da sessão: {\"user_id\": 12345, \"token\": \"jwt_token_exemplo_abc123\", \"login_at\": \"2026-02-19 10:36:09\"}\n",
+      "Acesso autorizado! Dados da sessão: {\"user_id\": 12345, \"token\": \"jwt_token_exemplo_abc123\", \"login_at\": \"2026-02-20 09:44:31\"}\n",
       "\n",
       "Aguardando 3 segundos para a sessão expirar...\n",
       "Acesso negado: Sessão expirada ou inexistente.\n"
